--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <div id="container">
     <h1>Dice Roller</h1>
     <label># of dice:</label>
-    <input type="number" id="numofdice" value="1" min="1">
+    <input type="number" id="numofdice" value="1" min="1" max="6">
     <button onclick="rolldice()">Roll Dice</button>
     <div id="diceresult"></div>
     <div id="diceimages"></div>
